# START

./: .gitignore  .prettierrc.mjs  Cargo.toml  app.http  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
app/src/: App.vue  cmd.rs  config.rs  context.rs  index.css  index.ts  main.rs
app/src/components/: Logo.vue  Navi.vue  WindowHeader.vue
app/src/components/widgets/: IconButton.vue
app/src/router/api/: mod.rs  plugin.rs  search.rs
app/src/search/: mod.rs
app/src/server/: mod.rs
app/src/types/: bridge.ts  env.d.ts
app/src/utils/: mod.rs  opt.rs  opt_json.rs
context/context/: Cargo.toml
context/context/src/: lib.rs
context/host-pluginmanager/: Cargo.toml
context/host-pluginmanager/src/: lib.rs
generate/: Cargo.toml
generate/src/: main.rs
html/: link.md
html/launcher/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
html/launcher/src/: App.vue  index.css  main.ts  net.ts  router.ts  vite-env.d.ts
html/launcher/src/components/: Content.vue  Search.vue  TableView.vue
html/launcher/src/components/debug/: DebugAdb.vue  DebugOp.vue
html/launcher/src/components/ui/: TableView.vue
html/launcher/src/components/ui/avatar/: AvatarFallback.vue
html/launcher/src/components/ui/breadcrumb/: BreadcrumbEllipsis.vue  BreadcrumbItem.vue  BreadcrumbLink.vue  BreadcrumbList.vue  BreadcrumbPage.vue  BreadcrumbSeparator.vue
html/launcher/src/components/ui/button/: Button.vue  index.ts
html/launcher/src/components/ui/input/: Input.vue
html/launcher/src/components/ui/loading/: Loading.vue
html/launcher/src/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
html/launcher/src/components/ui/search/: Search.vue
html/launcher/src/components/ui/skeleton/: Skeleton.vue
html/launcher/src/components/ui/sonner/: Sonner.vue
html/launcher/src/components/ui/state/: State.vue  index.ts
html/launcher/src/components/ui/table/: Table.vue  TableBody.vue  TableCaption.vue  TableCell.vue  TableEmpty.vue  TableFooter.vue  TableHead.vue  TableRow.vue  utils.ts
html/launcher/src/components/ui/useReqState/: UseReqState.vue  index.ts
html/launcher/src/lib/: drag.ts  init.ts  net.ts
plugin/plugin/: Cargo.toml
plugin/plugin-macro/: Cargo.toml
plugin/plugin-macro/src/: lib.rs
plugin/plugin/src/: lib.rs
plugin/pluginmanager/: Cargo.toml
plugin/pluginmanager/src/: error.rs  info.rs  lib.rs  pm.rs
plugin_adb/: Cargo.toml
plugin_adb/src/: lib.rs  scan.rs
plugin_d/: Cargo.toml
plugin_d/src/: lib.rs  resp.rs
plugin_manager/: Cargo.toml
plugin_manager/src/: config.rs  lib.rs  main.rs  respres.rs  urlpath.rs
plugin_manager/src/pm/: mod.rs  pm.rs  pmimpl.rs
plugin_manager/src/router/: admin.rs  apiv1.rs  appstate.rs  mod.rs  plugin.rs
plugin_manager/src/router/v1/: apiv1.rs  mod.rs  plugin.rs
plugin_manager/src/utils/: file.rs  mod.rs  netlog.rs
plugins/plugin_adb/: Cargo.toml
plugins/plugin_adb/src/: adb.rs  lib.rs
plugins/plugin_desktop/: Cargo.toml
server/app/: Cargo.toml
server/app/src/: config.rs  main.rs
server/app/src/pm/: mod.rs
server/app/src/router/api/: mod.rs  plugin.rs
server/app/src/utils/: opt_json.rs
server/key/: Cargo.toml
server/key/src/: key.rs  lib.rs  main.rs
server/plugin_d/: Cargo.toml
server/plugin_d/src/: lib.rs  resp.rs
server/plugin_manager/: Cargo.toml
server/plugin_manager/src/: lib.rs  scan.rs
server/window/: Cargo.toml
server/window/src/: config.rs  event.rs  key.rs  lib.rs  main.rs  runner.rs  utils.rs
tsgenerate/: Cargo.toml
utils/mdns_helper/: Cargo.toml
utils/mdns_helper/src/: lib.rs
window/: Cargo.toml
window/src/: app.rs  config.rs  event.rs  lib.rs  main.rs  runner.rs
window/window/: Cargo.toml
window/window-macro/: Cargo.toml
window/window-macro/src/: lib.rs
window/window/src/: event.rs  lib.rs  script.rs  window.rs  wm.rs
