[workspace]
resolver = "3"
members = ["app", "plugin/plugin", "plugin/plugin-macro"]

[workspace.dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "dev", package = "libcommon" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

tokio = { version = "1", features = ["full"] }
