[workspace]
resolver = "3"
members = [
    "app",
    "context/context",
    "context/host-pluginmanager",
    "plugin/plugin",
    "plugin/plugin-macro",
    "plugin/pluginmanager",
    "window/window",
    "window/window-macro",
]

[workspace.dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", package = "libcommon", branch = "dev" }
marker = { git = "https://github.com/munch1182/p2.git", package = "marker", branch = "dev" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

tokio = { version = "1.52", features = ["full"] }

dashmap = "6.1"
