[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin_d = { path = "../plugin_d" }
plugin_manager = { path = "../plugin_manager" }
window = { path = "../window" }
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon", features = [
    "logfile_default",
] }
tokio = { version = "1.47", features = ["full"] }
