[package]
name = "generate"
version = "0.1.0"
edition = "2024"

[dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"

plugin_d = { path = "../server/plugin_d" }
