[package]
name = "plugin_adb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin_d = { path = "../plugin_d" }
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
axum = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
