[package]
name = "plugin_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin_d = { path = "../plugin_d" }
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon", features = [
    "logfile_default",
] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
futures = "0.3"
libloading = "0.8"
