[package]
name = "plugin_adb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

plugin_d = { path = "../../server/plugin_d" }
