[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
libloading = "0.8"
lru = "0.16"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

plugin_d = { path = "../plugin_d" }
window = { path = "../window" }
