[package]
name = "window"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.34"
wry = "0.53"
libcommon = { git = "https://github.com/munch1182/p2.git", branch = "master", package = "libcommon" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
parking_lot = "0.12"

key = { path = "../key", features = ["tokio"] }
